alteração de layout issue #4
alinhamento de brands social

--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ top:27%;
 z-index:5;
 }
 .acompanhe div{
-margin:5px;
+margin:3px;
 }
 .sessao{
 background-image:url('../img/sessao.png');
